SSG-4034: Fix for Policy evaluation stops + severe message for undeclared variable used in Audit Detail assertion
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26362 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -988,7 +988,7 @@ soap.roles.clusterProperty = soap.roles
 soap.roles.getSystemProperty = false
 soap.roles.setSystemProperty = true
 
-template.strictMode.description = If true, using nonexistent variables in a template will cause assertions to fail.  If false (the default) an empty string is used instead.
+template.strictMode.description = If true, using nonexistent variables in a template can cause assertions or policy processing to fail.  If false (the default) an empty string is used instead.
 template.strictMode.default = false
 template.strictMode.systemProperty = ${propertyPrefix}.template.strictMode
 template.strictMode.clusterProperty = template.strictMode
