Updated Luna JceProviderEngine to support version 5.0.0 of the Luna client software (while retaining support for version 4.4.1).
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26377 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/policy/ivy.xml
+++ b/modules/policy/ivy.xml
@@ -57,6 +57,8 @@
         <!-- Optional security provider -->
         <dependency org="com.chrysalisits.cryptox" name="luna-libs" rev="1" force="true" conf="optional"/>
         <!-- Optional security provider -->
+        <dependency org="com.safenetinc" name="luna-provider" rev="5.0.0-17" force="true" conf="optional"/>
+        <!-- Optional security provider -->
         <dependency org="com.ncipher" name="ncipher-libs" rev="1" force="true" conf="optional"/>
         <!-- RSA needed for running tests (since alternatives jarfiles are not deployed) -->
         <dependency org="com.rsa" name="jsafe-jce" rev="4.1.0.1" force="true" conf="test"/>
