SSG-4035: Remove unused methods from NodeApi. Updated NodeApi to require the PC client certificate. The PatchServiceApi and NodeManagementApi now require a cookie for localhost use. The MonitoringApi can no longer be used via localhost (unless a valid client certificate is used). The patch client is now run as layer7 using the new patchcli_launch script.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26378 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/build.xml
+++ b/build.xml
@@ -2960,6 +2960,7 @@
                     <include name="ssgconfig_launch"/>
                     <include name="systeminfo.sh"/>
                     <include name="patch_launcher"/>
+                    <include name="patchcli_launch"/>
                 </fileset>
             </copy>
             <copy file="${build.dir}/patchverifier/layer7-gateway-patchverifier.jar" tofile="@{dir}/${install.src.app.libexec}/patchVerifier.jar"/>
