Update Tomcat to 6.0.28 (was 6.0.24), we no longer include unused Tomcat libraries (logging updated so we don't warn about missing JSP DTDs/XSDs)
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26382 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/logging.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/logging.properties
@@ -34,6 +34,7 @@ org.springframework.beans.factory.config.PropertiesFactoryBean.level = SEVERE
 org.springframework.beans.factory.config.PropertyPlaceholderConfigurer.level = SEVERE
 com.l7tech.server.util.PasswordDecryptingPropertiesFactoryBean.level = SEVERE
 org.apache.cxf.phase.PhaseInterceptorChain.level = SEVERE
+org.apache.catalina.startup.DigesterFactory.level = SEVERE
 org.hibernate.validator.util.Version.level = SEVERE
 eu.vahlas.json.schema.level = SEVERE
 
