--- a/modules/gateway/reporting/ivy.xml
+++ b/modules/gateway/reporting/ivy.xml
@@ -32,6 +32,7 @@
         <dependency name="layer7-gateway-management" rev="latest.integration" force="true" conf="core"/>
 
         <dependency org="jasperreports" name="jasperreports" rev="3.1.2-p1" force="true" conf="core"/>
+        <dependency org="org.apache.tomcat" name="jasper-jdt" rev="6.0.28" force="true" conf="core"/>
 
         <dependency org="junit" name="junit" rev="4.7" force="true" conf="test"/>
     </dependencies>
