--- a/modules/gateway/server/ivy.xml
+++ b/modules/gateway/server/ivy.xml
@@ -84,11 +84,9 @@
         <dependency org="org.springframework" name="aspectjweaver" rev="2.5.4" force="true" conf="core"/> <!-- Used for parsing pointcut expressions only -->
         <dependency org="org.apache.ftpserver" name="ftpserver-parent" rev="1.0-543677-20070601" force="true"
                     conf="core"/>
-        <dependency org="org.apache.tomcat" name="annotations-api" rev="6.0.24" force="true" conf="core"/>
-        <dependency org="org.apache.tomcat" name="tomcat" rev="6.0.24" force="true" conf="core">
-            <exclude org="org.apache.tomcat" module="servlet-api" name="*" type="*" ext="*" conf=""
-                     matcher="exact"/>
-        </dependency>
+        <dependency org="org.apache.tomcat" name="annotations-api" rev="6.0.28" force="true" conf="core"/>
+        <dependency org="org.apache.tomcat" name="catalina" rev="6.0.28" force="true" conf="core"/>
+        <dependency org="org.apache.tomcat" name="coyote" rev="6.0.28" force="true" conf="core"/>
 
         <!-- Optional dependencies -->
         <dependency org="com.ibm.mq" name="mq6" rev="6.0.2.2" force="true" conf="optional"/>
@@ -114,6 +112,7 @@
         <exclude org="asm" module="asm-attrs" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
         <exclude org="com.sun.xml.fastinfoset" module="FastInfoset" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
         <exclude org="org.apache.cxf" module="cxf-rt-transports-http-jetty" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
+        <exclude org="org.apache.tomcat" module="servlet-api" artifact="*" type="*" ext="*" conf="" matcher="exact"/>
         <exclude org="xerces" module="xmlParserAPIs" artifact="*" type="*" ext="jar" conf="*" matcher="exact" />
 
         <conflict org="org.slf4j" module="slf4j-api" rev="1.5.11"/>
