Updated of Assertion comments implementation following the Dev & QA reviews. Still need to deal with removing support for HTML.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26425 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/PreferencesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/PreferencesDialog.properties
@@ -39,3 +39,11 @@ helpButton.mnemonic=H
 
 numHostsHistory.label=Gateway URL History Size:
 numHostsHistory.tooltip=Set the number of Gateway host URLs kept in logon dialog's history (0-50)
+policyValidation.label=Policy Validation Feedback:
+policyValidation.tooltip=Enable/Disable Policy Validation Feedback
+
+leftComment.label=Maximum Left Comment:
+leftComment.tooltip=Set the maximum displayed size for a left comment
+
+rightComment.label=Maximum Right Comment:
+rightComment.tooltip=Set the maximum displayed size for a right comment
