g FR-268: fixed by updating usages of isText() or isXml() from ContentTypeHeader to use isTextualContentType() instead. This class returns true for known types (text, XML, JSON, Application URL Encoded) and is now configurable via the cluster property 'contentType.otherTextualTypes'. This cluster property is dynamic at runtime. Added new bean 'SimplePropertyChangeHandler' which will call into ContentTypeHeader's setConfigurableTextualContentTypes() method when ever this cluster property is modified.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26435 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1272,3 +1272,6 @@ policyEditor.maxRhsCommentSize.clusterProperty = policyEditor.maxRhsCommentSize
 policyEditor.maxLhsCommentSize.description=Maximum size of a left aligned comment in the policy editor window
 policyEditor.maxLhsCommentSize.default = 30
 policyEditor.maxLhsCommentSize.clusterProperty = policyEditor.maxLhsCommentSize 
+
+otherTextualContentTypes.description=Other textual content types. Default are (text, xml, json and form encoded). Each content type must be on a new line and may include a charset e.g. application/custom; charset="UTF-8" 
+otherTextualContentTypes.clusterProperty = contentType.otherTextualTypes
