--- a/modules/gateway/production/ivy.xml
+++ b/modules/gateway/production/ivy.xml
@@ -58,6 +58,7 @@
         <dependency name="CacheAssertion" rev="latest.integration" conf="module"/>
         <dependency name="JSONSchemaAssertion" rev="latest.integration" conf="module"/>
         <dependency name="SimpleRawTransportAssertion" rev="latest.integration" conf="module"/>
+        <dependency name="EncodeDecodeAssertion" rev="latest.integration" conf="module"/>
         
         <!-- Optional Modular Assertions are copied to "dist" but not packaged -->
         <dependency name="CaWsdmAssertion" rev="latest.integration" conf="module-optional"/>
