bug 8858: Fixed by renaming "Collect ESM Metrics" Assertion and "Subscribe to WSDM Resource" Assertion including assertion names, assertion descriptions, and assertion properties dialog title.  Also renamed two cluster properties, "esm.notification.enabled" and "esm.notification.interval" including property names and property descriptions.  For more detail, please see the comment #9 in the SSG-4032.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26465 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1152,13 +1152,13 @@ security.xml.dsig.permittedDigestAlgorithms.clusterProperty = security.xml.dsig.
 security.xml.dsig.permittedDigestAlgorithms.systemProperty = com.l7tech.security.xml.dsig.permittedDigestAlgorithms
 security.xml.dsig.permittedDigestAlgorithms.setSystemProperty = true
 
-esmNotificationEnabled.description = Enable ESM subscription notifications (true/false)
-esmNotificationEnabled.default = true
-esmNotificationEnabled.clusterProperty = esm.notification.enabled
+wsdmNotificationEnabled.description = Enable WSDM subscription notifications (true/false)
+wsdmNotificationEnabled.default = true
+wsdmNotificationEnabled.clusterProperty = wsdm.notification.enabled
 
-esmNotificationInterval.description = The interval between ESM subscription notification attempts (in milliseconds). Note that this only applies to metrics notifications; status changes are sent as they occur.
-esmNotificationInterval.default = 60000
-esmNotificationInterval.clusterProperty = esm.notification.interval
+wsdmNotificationInterval.description = The interval between WSDM subscription notification attempts (in milliseconds). Note that this only applies to metrics notifications; status changes are sent as they occur.
+wsdmNotificationInterval.default = 60000
+wsdmNotificationInterval.clusterProperty = wsdm.notification.interval
 
 pkix.keyUsagePolicy.description=Policy for enforcement of X.509 Key Usage and Extended Key Usage extensions (XML string; empty to use system default policy)
 pkix.keyUsagePolicy.default=
