bug 8860: Improved the description of a cluster property "soapfault.template" as the following: (1) correct the typo, "relevent" to "relevant" (2) change "defaultfaultlevel" to "soapfault.level" (3) specify the value of "soapfault.level" as 1 for template.
So the new description of "soapfault.template" is "Template used for SOAP faults returned by the SSG (Text). This is only relevant when soapfault.level is set to 1 for template."

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26467 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -680,7 +680,7 @@ defaultfaultlevel.default = 2
 defaultfaultlevel.systemProperty = ${propertyPrefix}.fault.level
 defaultfaultlevel.clusterProperty = soapfault.level
 
-defaultfaulttemplate.description = Template used for SOAP faults returned by the SSG (Text). This is only relevent when defaultfaultlevel is set to template.
+defaultfaulttemplate.description = Template used for SOAP faults returned by the SSG (Text). This is only relevant when soapfault.level is set to 1 for template.
 defaultfaulttemplate.default = <s:Envelope xmlns:s="http://schemas.xmlsoap.org/soap/envelope/"><s:Body><s:Fault><faultcode>s:Client</faultcode><faultstring>Client Error</faultstring></s:Fault></s:Body></s:Envelope>
 defaultfaulttemplate.systemProperty = ${propertyPrefix}.fault.template
 defaultfaulttemplate.clusterProperty = soapfault.template
