SSG-4074: Gateway XML parser is now configured to use a symbol table with soft references to avoid OOM (PermGen)
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26480 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/system.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/system.properties
@@ -14,3 +14,4 @@ sun.rmi.dgc.server.gcInterval=3600000
 # Layer 7 properties
 com.l7tech.common.http.prov.apache.CommonsHttpClient.maxConnectionsPerHost=750
 com.l7tech.common.http.prov.apache.CommonsHttpClient.maxTotalConnections=7500
+com.l7tech.common.xmlSoftSymbolTable=true
