--- a/modules/common/ivy.xml
+++ b/modules/common/ivy.xml
@@ -41,6 +41,7 @@
         <dependency org="xerces" name="xercesImpl" rev="2.10.0" force="true" conf="core"/>
         <dependency org="com.ibm" name="xss4j.00.patch" rev="1.0" force="true" conf="core"/>
         <dependency org="com.ibm" name="xss4j" rev="1.0" force="true" conf="core"/>
+        <dependency org="bouncycastle" name="bcprov-jdk16" rev="145" force="true" conf="test"/>
         <dependency org="junit" name="junit" rev="4.7" force="true" conf="test"/>
     </dependencies>
 </ivy-module>
