--- a/modules/gateway/server/ivy.xml
+++ b/modules/gateway/server/ivy.xml
@@ -29,7 +29,7 @@
     </publications>
     <dependencies>
         <!-- Module dependencies -->
-        <dependency name="layer7-gateway-common" rev="latest.integration" force="true" conf="core->default,optional"/>
+        <dependency name="layer7-gateway-common" rev="latest.integration" force="true" conf="core->default,optional; test->default,test,optional"/>
         <dependency name="layer7-uddi" rev="latest.integration" force="true" conf="core"/>
         <dependency name="layer7-utility" rev="latest.integration" force="true" conf="core; test->default,test"/>
         <dependency name="layer7-common" rev="latest.integration" force="true" conf="core; test->default,test"/>
