Initial implementation of new Build SAML Protocol Response assertion UI, Server and some test cases. UI needs to be updated to look for the presence of variables which can be set via the new Process SAML Authentication Request assertion. Need to complete test cases. Fixed memory inconsistency error in JaxbUtil.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26504 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/SamlpAssertion/ivy.xml
+++ b/modules/gateway/assertions/SamlpAssertion/ivy.xml
@@ -21,6 +21,7 @@
 	<dependencies>
         <dependency org="com.l7tech.lib" name="samlp_v1_jaxb" rev="1.0" force="true" conf="core"/>
         <dependency org="com.l7tech.lib" name="samlp_v2_jaxb" rev="1.0" force="true" conf="core"/>
+        <dependency org="com.l7tech.lib" name="samlp_v2_authn_jaxb" rev="1.0" force="true" conf="core"/>
                 
         <dependency name="layer7-modular-assertions" rev="latest.integration" force="true"
                     conf="compile->compile;runtime->runtime;test->test"/>
