SSM-2863: fixed by adding support for EncryptedAssertion element for SAML 2.0. Updated validation to validate if an success is selected and only an encrypted assertion is supplied.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26616 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/SamlpAssertion/src/main/resources/com/l7tech/external/assertions/samlpassertion/console/SamlpResponseBuilderPropertiesDialog.properties
+++ b/modules/gateway/assertions/SamlpAssertion/src/main/resources/com/l7tech/external/assertions/samlpassertion/console/SamlpResponseBuilderPropertiesDialog.properties
@@ -18,4 +18,5 @@ responseAttributes.recipient=Recipient:
 
 responseElements.title=Response Elements
 responseElements.assertions=Assertion(s):
+responseElements.encryptedAssertions.2_0_only=EncryptedAssertion(s):
 responseElements.extensions.2_0_only=Extensions:
