SSM-2873: Fix for SAML Web SSO Status: Missing colon in one Response Status field name
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26632 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/SamlpAssertion/src/main/resources/com/l7tech/external/assertions/samlpassertion/console/SetSamlStatusPropertiesDialog.properties
+++ b/modules/gateway/assertions/SamlpAssertion/src/main/resources/com/l7tech/external/assertions/samlpassertion/console/SetSamlStatusPropertiesDialog.properties
@@ -1,5 +1,5 @@
 # Resource bundle for SetSamlStatusPropertiesDialog
 
 version.label=SAML &Version:
-status.label=Response &Status
+status.label=Response &Status:
 variableName.label=&Output Variable:
