--- a/modules/gateway/console/ivy.xml
+++ b/modules/gateway/console/ivy.xml
@@ -22,7 +22,7 @@
         <artifact name="layer7-gateway-console" type="jar" ext="jar" conf="master"/>
     </publications>
     <dependencies>
-        <dependency name="layer7-gateway-common" rev="latest.integration" force="true" conf="core"/>
+        <dependency name="layer7-gateway-common" rev="latest.integration" force="true" conf="core; test->default,test"/>
         <dependency name="layer7-common" rev="latest.integration" force="true" conf="core"/>
         <dependency name="layer7-gui" rev="latest.integration" force="true" conf="core"/>
         <dependency name="layer7-utility" rev="latest.integration" force="true" conf="core"/>
