--- a/build.xml
+++ b/build.xml
@@ -2962,6 +2962,9 @@
                     <include name="patch_launcher"/>
                     <include name="patchcli_launch"/>
                 </fileset>
+                <fileset dir="${src.root}/etc/appliance/crypto">
+                    <include name="ncipherconfig.pl"/>
+                </fileset>
             </copy>
             <copy file="${build.dir}/patchverifier/layer7-gateway-patchverifier.jar" tofile="@{dir}/${install.src.app.libexec}/patchVerifier.jar"/>
 
