--- a/build.xml
+++ b/build.xml
@@ -2918,6 +2918,7 @@
             <mkdir dir="@{dir}/${install.src.app.ssgconfig}"/>
             <mkdir dir="@{dir}/${install.src.app.ssgprofile}"/>
             <mkdir dir="@{dir}/${install.src.app.configdir}"/>
+            <mkdir dir="@{dir}/${install.src.app.configlogs}"/>
             <!--<mkdir dir="@{dir}/${install.src.app.scaconfig}"/>-->
 
             <!--copy the system config wizard -->
@@ -3062,6 +3063,7 @@
             <mkdir dir="@{dir}/${install.src.ssg.samples}"/>
             <mkdir dir="@{dir}/${install.src.ssg.conf}"/>
             <mkdir dir="@{dir}/${install.src.ssg.configwizard}"/>
+            <mkdir dir="@{dir}/${install.src.ssg.configwizard.logs}"/>
             <mkdir dir="@{dir}/${install.src.ssg.etc}"/>
             <mkdir dir="@{dir}/${install.src.ssg.backuprestore}"/>
             <mkdir dir="@{dir}/${install.src.ssg.backuprestore.cfg}"/>
