--- a/build.xml
+++ b/build.xml
@@ -2313,6 +2313,15 @@
             </manifest>
         </jar>
 
+        <jar jarfile="${build.dir}/configwizard/ConfigKeystoreFileProperty.jar">
+            <manifest>
+                <attribute name="Main-Class" value="com.l7tech.util.ApplicationLauncher"/>
+                <attribute name="Class-Path" value="../runtime/lib/layer7-utility-${module.utility.version}.jar"/>
+                <attribute name="X-Layer7-Jar" value="../runtime/lib/layer7-gateway-config-${module.gateway.config.version}.jar"/>
+                <attribute name="X-Layer7-Main-Class" value="com.l7tech.gateway.config.manager.KeystoreFilePropertyManager"/>
+            </manifest>
+        </jar>
+
         <jar jarfile="${build.dir}/configwizard/ConfigProcessController.jar">
             <manifest>
                 <attribute name="Main-Class" value="com.l7tech.util.ApplicationLauncher"/>
