Ensure test modules are packaged for skunkworks.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26760 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/build.xml
+++ b/build.xml
@@ -1707,7 +1707,7 @@
             <fileset dir="modules" includes="**/build.xml"/>
         </ivy:buildlist>
         <ivy-echo-build-plan refid="module-build-path-skunkworks" pathid="build-path.text"/>
-        <modules buildpathref="module-build-path-skunkworks" target="publish"/>
+        <modules buildpathref="module-build-path-skunkworks" target="publish-all-quick"/>
     </target>
 
     <!--
