Fixed by correctly converting an input among the units, milliseconds, seconds, minutes, hours, and days at "Advanced Configuration" step in "Create LDAP Identity Provider Wizard" or "Edit LDAP Identity Properties Wizard".
Also, Added tooltips (shown as below) for the text fields: Cache Size, Cache Maximum Age, and Maximum Nesting, so user can get hints to correct invalid inputs in these text fields.
(1) Cache size is required and must be greater than or equal to zero.
(2) Cache maximum age is required and must be greater than zero and less than 25 days.
(3) Maximum nesting is required and must be greater than or equal to zero.

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26768 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/IdentityProviderDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/IdentityProviderDialog.properties
@@ -148,3 +148,7 @@ advancedConfiguration.attrs.edit.title=Edit Attribute
 advancedConfiguration.attrs.prompt=Attribute:
 advancedConfiguration.group.caseInsensitiveMembership=&Use case insensitive group membership check
 
+tooltip.cache.size=Cache size is required and must be greater than or equal to zero.
+tooltip.cache.maximum.age=Cache maximum age is required and must be greater than zero and less than 25 days.
+tooltip.maximum.nesting=Maximum nesting is required and must be greater than or equal to zero.
+
