Fixed some find bugs issues: extracted generic ThreadPool class from JmsThreadPool and EmailListenerThreadPool. Thread pools for jms and email are now created as spring beans. Email listener thread pool can now be modified at runtime.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26776 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1043,11 +1043,11 @@ principalSessionCacheMaxPrincipalGroups.description = Number of groups per princ
 principalSessionCacheMaxPrincipalGroups.default = 50
 principalSessionCacheMaxPrincipalGroups.clusterProperty = principalSessionCache.maxPrincipalGroups
 
-jmsListenerThreadLimit.description=The global limit on the number of processing threads that can be created to work off all JMS endpoints
+jmsListenerThreadLimit.description=The global limit on the number of processing threads that can be created to work off all JMS endpoints. Value must be >= 5.
 jmsListenerThreadLimit.default=25
 jmsListenerThreadLimit.clusterProperty=jms.listenerThreadLimit
 
-emailListenerThreadLimit.description=The global limit on the number of processing threads that can be created to work off all Email endpoints
+emailListenerThreadLimit.description=The global limit on the number of processing threads that can be created to work off all Email endpoints. Value must be >= 5.
 emailListenerThreadLimit.default=25
 emailListenerThreadLimit.clusterProperty=email.listenerThreadLimit
 
