SSG-4160: Fix for Bridge Routing Assertion/XVC fails to handle WS-Security tokens without wsu:Expires element.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26789 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/xmlvpnclient/ivy.xml
+++ b/modules/xmlvpnclient/ivy.xml
@@ -28,7 +28,7 @@
         <dependency name="layer7-utility" rev="latest.integration" force="true" conf="core"/>
         <dependency name="layer7-gui" rev="latest.integration" force="true" conf="core"/>
         <dependency name="layer7-policy" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-proxy" rev="latest.integration" force="true" conf="core"/>
+        <dependency name="layer7-proxy" rev="latest.integration" force="true" conf="core; test->default,test"/>
         <dependency org="com.incors.plaf" name="kunststoff" rev="2.0.2" force="true" conf="core"/>
         <dependency org="org.mortbay.jetty" name="jetty" rev="6.1.24" force="true" conf="core"/>
         <dependency org="org.mortbay.jetty" name="jetty-util" rev="6.1.24" force="true" conf="core"/>
