bug 9168:  (Also fixes #SSG-3412).  The ID attribute list is now configurable via a cluster property, security.xml.dsig.idAttributeNames.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26790 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1152,7 +1152,22 @@ security.xml.dsig.permittedDigestAlgorithms.description = List of message digest
 security.xml.dsig.permittedDigestAlgorithms.default = MD5,SHA,SHA-1,SHA-256,SHA-384,SHA-512
 security.xml.dsig.permittedDigestAlgorithms.clusterProperty = security.xml.dsig.permittedDigestAlgorithms
 security.xml.dsig.permittedDigestAlgorithms.systemProperty = com.l7tech.security.xml.dsig.permittedDigestAlgorithms
+security.xml.dsig.permittedDigestAlgorithms.getSystemProperty = false
 security.xml.dsig.permittedDigestAlgorithms.setSystemProperty = true
+
+security.xml.dsig.idAttributeNames.description = Attribute names that will be recognized as ID attributes for purposes of locating Signature Reference URI targets during WS-Security processing.  The special prefix "local" matches the namespace URI against the owning element rather than the attribute.
+security.xml.dsig.idAttributeNames.default = {http://docs.oasis-open.org/wss/2004/01/oasis-200401-wss-wssecurity-utility-1.0.xsd}Id\n\
+ {http://schemas.xmlsoap.org/ws/2002/07/utility}Id\n\
+ {http://schemas.xmlsoap.org/ws/2003/06/utility}Id\n\
+ {urn:oasis:names:tc:SAML:1.0:assertion}local:AssertionID\n\
+ {urn:oasis:names:tc:SAML:2.0:assertion}local:ID\n\
+ Id\n\
+ id\n\
+ ID\n
+security.xml.dsig.idAttributeNames.clusterProperty = security.xml.dsig.idAttributeNames
+security.xml.dsig.idAttributeNames.systemProperty = com.l7tech.common.security.xml.idAttributeConfig
+security.xml.dsig.idAttributeNames.getSystemProperty = false
+security.xml.dsig.idAttributeNames.setSystemProperty = true
 
 wsdmNotificationEnabled.description = Enable WSDM subscription notifications (true/false)
 wsdmNotificationEnabled.default = true
