--- a/modules/gateway/production/ivy.xml
+++ b/modules/gateway/production/ivy.xml
@@ -45,6 +45,7 @@
         <dependency name="EsmAssertion" rev="latest.integration" conf="module"/>
         <dependency name="MessageContextAssertion" rev="latest.integration" conf="module"/>
         <dependency name="SamlpAssertion" rev="latest.integration" conf="module"/>
+        <dependency name="SplitJoinAssertion" rev="latest.integration" conf="module"/>
         <dependency name="SamlIssuerAssertion" rev="latest.integration" conf="module"/>
         <dependency name="CertificateAttributesAssertion" rev="latest.integration" conf="module"/>
         <dependency name="XacmlPdpAssertion" rev="latest.integration" conf="module"/>
