SSM-2904: Only 'Yes' 'No' buttons for confirming changing roles/permissions.  All uses of the utiltiy function are asking yes/no questions.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26797 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/RbacGui.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/RbacGui.properties
@@ -14,6 +14,8 @@ manageRoles.deleteMessage=Are you sure you want to remove the {0} role from the 
 manageRoles.deleteTitle=Confirm Role Removal
 manageRoles.removeAssignmentTitle=Confirm User Assignment Removal
 manageRoles.removeAssignmentMessage=Are you sure you want to remove the selected user assignments?
+manageRoles.removePermissionTitle=Remove Permission
+manageRoles.removePermissionMessage=Are you sure you want to remove this permission?
 
 editRoleDialog.newTitle=Edit New Role
 editRoleDialog.existingTitle=Edit {0} Role
