SSM-2898: Role management dialog now has Help and Close buttons instead of OK and Cancel.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26800 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/console.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/console.properties
@@ -1,5 +1,7 @@
 okButton_text=&OK
 cancelButton_text=&Cancel
+closeButton_text=&Close
+helpButton_text=&Help
 
 Look_And_FeelMenu = Look And Feel Menu
 Look_And_Feel = Look And Feel
