SSG-3927: Cached resources from a monitored URL now support configuration of a maximum stale age. This is the maximum age of a cached resource when access of the original resource is failing. The cached copy of a resource should be reused if there is a network error, or when the resource becomes invalid (perhaps due to corruption) until the maximum stale age is reached.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26811 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -635,10 +635,20 @@ xsltMaxCacheAge.default = 300000
 xsltMaxCacheAge.systemProperty = ${propertyPrefix}.xsltcache.maxAge
 xsltMaxCacheAge.clusterProperty = xsltcache.maxAge
 
+xsltMaxStaleCacheAge.description = Maximum age of stale (expired) cached stylesheets loaded from URLs, -1 for no expiry (Milliseconds). Requires gateway restart.
+xsltMaxStaleCacheAge.default = -1
+xsltMaxStaleCacheAge.systemProperty = ${propertyPrefix}.xsltcache.maxStaleAge
+xsltMaxStaleCacheAge.clusterProperty = xsltcache.maxStaleAge
+
 schemaMaxCacheAge.description = Maximum age of cached XML Schema documents loaded from URLs (Milliseconds). Requires gateway restart.
 schemaMaxCacheAge.default = 30000
 schemaMaxCacheAge.systemProperty = ${propertyPrefix}.schemacache.maxAge
 schemaMaxCacheAge.clusterProperty = schemacache.maxAge
+
+schemaMaxStaleCacheAge.description = Maximum age of stale (expired) cached XML Schema documents loaded from URLs, -1 for no expiry (Milliseconds).
+schemaMaxStaleCacheAge.default = -1
+schemaMaxStaleCacheAge.systemProperty = ${propertyPrefix}.schemacache.maxStaleAge
+schemaMaxStaleCacheAge.clusterProperty = schemacache.maxStaleAge
 
 schemaMaxCacheEntries.description = Maximum number of cached XML schema documents loaded from URLs, 0 for no caching (Integer).
 schemaMaxCacheEntries.default = 100
