SSM-2909: Fix for schemacache.maxAge cluster property description should not include "Requires gateway restart".
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26812 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -640,7 +640,7 @@ xsltMaxStaleCacheAge.default = -1
 xsltMaxStaleCacheAge.systemProperty = ${propertyPrefix}.xsltcache.maxStaleAge
 xsltMaxStaleCacheAge.clusterProperty = xsltcache.maxStaleAge
 
-schemaMaxCacheAge.description = Maximum age of cached XML Schema documents loaded from URLs (Milliseconds). Requires gateway restart.
+schemaMaxCacheAge.description = Maximum age of cached XML Schema documents loaded from URLs (Milliseconds).
 schemaMaxCacheAge.default = 30000
 schemaMaxCacheAge.systemProperty = ${propertyPrefix}.schemacache.maxAge
 schemaMaxCacheAge.clusterProperty = schemacache.maxAge
