SSG-2186: Fix for remote schemas should use whitelist. Added cluster property for remote XML Schema URLs "schema.remoteResourceRegex", the default setting allows any URL.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26813 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -675,6 +675,11 @@ schemaCacheMaxSchemaSize.default = ${documentDownload.maxSize}
 schemaCacheMaxSchemaSize.systemProperty = ${propertyPrefix}.schemacache.maxSchemaSize
 schemaCacheMaxSchemaSize.clusterProperty = schemacache.maxSchemaSize
 
+schema.remoteResourceRegex.description = Regular expression to match URLs from which download of remote XML Schema dependencies is permitted.
+schema.remoteResourceRegex.default = .*
+schema.remoteResourceRegex.systemProperty = ${propertyPrefix}.schema.remoteResourceRegex
+schema.remoteResourceRegex.clusterProperty = schema.remoteResourceRegex
+
 ephemeralKeyMaxCacheEntries.description = Maximum number of cached ephemeral key thumbprints per-node, or 0 to disable ephemeral key caching (Integer)
 ephemeralKeyMaxCacheEntries.default = 1000
 ephemeralKeyMaxCacheEntries.systemProperty = ${propertyPrefix}.ekeycache.maxEntries
