--- a/modules/gateway/common/src/main/resources/com/l7tech/EntityTypes.properties
+++ b/modules/gateway/common/src/main/resources/com/l7tech/EntityTypes.properties
@@ -29,3 +29,4 @@ TRUSTED_ESM_USER=com.l7tech.gateway.common.esmtrust.TrustedEsmUser
 UDDI_REGISTRY=com.l7tech.gateway.common.uddi.UDDIRegistry
 UDDI_PROXIED_SERVICE_INFO=com.l7tech.gateway.common.uddi.UDDIProxiedServiceInfo
 UDDI_SERVICE_CONTROL=com.l7tech.gateway.common.uddi.UDDIServiceControl
+SECURE_PASSWORD=com.l7tech.gateway.common.security.password.SecurePassword
