SSM-2692: extend the timestamp interval to use a long integer.  Limiting user input to <100 years.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26826 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/AddWssTimestampDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/AddWssTimestampDialog.properties
@@ -12,3 +12,5 @@ timestamp.resolution.default = <Default>
 timestamp.resolution.NANOSECONDS = Nanoseconds
 timestamp.resolution.MILLISECONDS = Milliseconds
 timestamp.resolution.SECONDS = Seconds
+expiry.limit.error=Expiry is required and must be greater than zero and less than 100 years.
+encrypt.selection.error=Neither BST nor SKI selected
