--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/RequireWssTimestampDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/RequireWssTimestampDialog.properties
@@ -1,2 +1,3 @@
-expiryTimeLabel.text=Maximum &Expiry Time:
+expiryTimeLabel.text=&Maximum Expiry Time:
 requireSignatureCheckbox.text=Require &Signature
+expiry.limit.error=Expiry is required and must be greater than zero and less than 100 years.
