Fixed usage of InteractiveGuiTester from within IntelliJ IDEA.  Added interactive test/demo for SecurePasswordComboBox.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26827 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/xmlvpnclient/ivy.xml
+++ b/modules/xmlvpnclient/ivy.xml
@@ -26,7 +26,7 @@
         <dependency name="layer7-test" rev="latest.integration" force="true" conf="test"/>
         <dependency name="layer7-common" rev="latest.integration" force="true" conf="core; test->default,test"/>
         <dependency name="layer7-utility" rev="latest.integration" force="true" conf="core"/>
-        <dependency name="layer7-gui" rev="latest.integration" force="true" conf="core"/>
+        <dependency name="layer7-gui" rev="latest.integration" force="true" conf="core; test->default,test"/>
         <dependency name="layer7-policy" rev="latest.integration" force="true" conf="core"/>
         <dependency name="layer7-proxy" rev="latest.integration" force="true" conf="core; test->default,test"/>
         <dependency org="com.incors.plaf" name="kunststoff" rev="2.0.2" force="true" conf="core"/>
