--- a/modules/gui/ivy.xml
+++ b/modules/gui/ivy.xml
@@ -19,7 +19,8 @@
 	</publications>
 	<dependencies>
 		<dependency name="layer7-common" rev="latest.integration" force="true" conf="core"/>
-		<dependency name="layer7-utility" rev="latest.integration" force="true" conf="core"/>
+        <dependency name="layer7-utility" rev="latest.integration" force="true" conf="core"/>
+        <dependency name="layer7-test" rev="latest.integration" force="true" conf="test"/>
 		<dependency org="edu.stanford.ejalbert" name="browser-launcher" rev="1.0rc4" force="true" conf="core"/>
 		<dependency org="com.intellij" name="forms_rt" rev="9.0.1" force="true" conf="core"/>
 		<dependency org="junit" name="junit" rev="4.7" force="true" conf="test"/>
