Add support for configuration of HTTP options, as per http://sarek/mediawiki/index.php/Resource_Access_And_Monitoring_Enhancements . When HTTP configuration is desired a GenericHttpClient should be obtained from one of the new GenericHttpClientFactory's (ConfiguredCommonsHttpClientFactory or ConfiguredUrlConnectionHttpClientFactory), which use the new HttpConfigurationCache to configure the parameters.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26836 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/JSONSchemaAssertion/src/main/resources/com/l7tech/external/assertions/jsonschema/console/JSONSchemaPropertiesDialog.properties
+++ b/modules/gateway/assertions/JSONSchemaAssertion/src/main/resources/com/l7tech/external/assertions/jsonschema/console/JSONSchemaPropertiesDialog.properties
@@ -21,6 +21,7 @@ error.badurl=This is not a well formed URL.
 
 fetchUrlTextBox.description = <html>The Gateway will periodically check this URL and download the latest schema.
 fetchUrlTextBox.label = URL to monitor:
+manageHttpOptionsButton.label = HTTP Options
 
 urlDialog.title = Enter the URL to load the schema from:
 urlDialog.prompt = JSON Schema URL:
