--- a/modules/gateway/assertions/XacmlPdpAssertion/src/main/resources/com/l7tech/external/assertions/xacmlpdp/console/XacmlPdpPropertiesDialog.properties
+++ b/modules/gateway/assertions/XacmlPdpAssertion/src/main/resources/com/l7tech/external/assertions/xacmlpdp/console/XacmlPdpPropertiesDialog.properties
@@ -20,3 +20,4 @@ settings=Settings
 fail.label=Fail Assertion if &decision is not 'Permit'
 ok=&OK
 cancel=&Cancel
+manageHttpOptionsButton.label=HTTP Options
