--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/SchemaValidationPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/SchemaValidationPropertiesDialog.properties
@@ -64,3 +64,4 @@ globalItem.label = Pick from global schemas
 
 urlDialog.title = Enter the URL to load the schema from:
 urlDialog.prompt = Schema URL:
+manageHttpOptionsButton.label = HTTP Options
