--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/XslTransformationPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/XslTransformationPropertiesDialog.properties
@@ -41,6 +41,7 @@ fetchRegexList.examples.label = <html>Examples:<ul><li>http://.*<li>https://[a-z
 fetchUrlRadio.label = Monitor URL for latest value
 fetchUrlTextBox.description = <html>The Gateway will periodically check this URL and download the latest stylesheet.
 fetchUrlTextBox.label = URL to monitor:
+manageHttpOptionsButton.label = HTTP Options
 
 specifyRadio.label = Configured in advance
 specifyFileButton.text = &Read File
