--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1,4 +1,4 @@
-#
+\#
 # Server Configuration Properties (used by ServerConfig)
 #
 
@@ -560,6 +560,11 @@ ioHttpPoolMinSpareThreads.description = Core number of concurrent active HTTP co
 ioHttpPoolMinSpareThreads.default = 185
 ioHttpPoolMinSpareThreads.systemProperty = ${propertyPrefix}.ioHttpPoolMinSpareThreads
 ioHttpPoolMinSpareThreads.clusterProperty = io.httpCoreConcurrency
+
+ioHttpProxy.description = Default HTTP Proxy configuration.
+ioHttpProxy.systemProperty = ${propertyPrefix}.ioHttpProxy
+ioHttpProxy.clusterProperty = ioHttpProxy
+ioHttpProxy.visible = false
 
 ioJmsErrorSleep.description = Time to sleep after a connection error for an inbound JMS Queue (timeunit)
 ioJmsErrorSleep.default = 60s
