--- a/modules/gateway/common/src/main/resources/com/l7tech/EntityTypes.properties
+++ b/modules/gateway/common/src/main/resources/com/l7tech/EntityTypes.properties
@@ -30,3 +30,4 @@ UDDI_REGISTRY=com.l7tech.gateway.common.uddi.UDDIRegistry
 UDDI_PROXIED_SERVICE_INFO=com.l7tech.gateway.common.uddi.UDDIProxiedServiceInfo
 UDDI_SERVICE_CONTROL=com.l7tech.gateway.common.uddi.UDDIServiceControl
 SECURE_PASSWORD=com.l7tech.gateway.common.security.password.SecurePassword
+HTTP_CONFIGURATION=com.l7tech.gateway.common.resources.HttpConfiguration
