initital implementation of http://sarek/mediawiki/index.php?title=GIF_Support_Phase2. Added new UDDIRegistry admin method, new publish and unpublish UDDI tasks and test coverage for publishing and unpublishing a GIF endpoint. New manage meta data button on Publish to UDDI dialog not implemented yet.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26850 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -3,7 +3,7 @@
 #
 
 #
-# FYI: When defining a proprety with a default of another property e.g. myproperty.default= ${myotherprop},
+# FYI: When defining a property with a default of another property e.g. myproperty.default= ${myotherprop},
 # then myotherprop should only be available as a system property. It is not currently intended for default
 # properties to be dynamic.
 # If it is also available as a cluster property, and a value has been supplied (i.e. it exists in cluster_properties)
@@ -750,6 +750,11 @@ uddi.autorepublish.systemProperty = ${propertyPrefix}.uddi.auto_republish
 uddi.centrasite.activesoa.virtual.service.tmodelkey.description = tModelKey to add to proxied business services in ActiveSOA.
 uddi.centrasite.activesoa.virtual.service.tmodelkey.clusterProperty = uddi.centrasite.activesoa.virtual.service.tmodelkey
 uddi.centrasite.activesoa.virtual.service.tmodelkey.default = uddi:9de0173b-5117-11de-8cf9-da0192ff3739
+
+uddi.systinet.gif.management.system.description = keyValue for GIF 'uddi:systinet.com:management:system' keyedReference
+uddi.systinet.gif.management.system.clusterProperty = uddi.systinet.gif.management.system
+uddi.systinet.gif.management.system.default = Layer7 Gateway
+uddi.systinet.gif.management.system.visible = false
 
 # This setting is no longer used (should now be configured via manager log sink UI)
 trafficLoggerEnabled.description = Whether or not traffic should be recorded (true/false)
