SSM-2915: Change button label for editing default proxy settings.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26858 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/HttpConfigurationManagerDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/HttpConfigurationManagerDialog.properties
@@ -8,7 +8,7 @@ table.column.path = Path
 table.column.proxy = Proxy
 label.default-proxy=Default HTTP Proxy:
 no-default-proxy=None
-button.edit-default-proxy=C&hange
+button.edit-default-proxy=Cha&nge
 button.add=&Add
 button.copy=C&opy
 button.edit=&Edit
