bug 8709: IPv6 support for the RemoteIpRange assertion.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26866 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/RemoteIpRangePropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/RemoteIpRangePropertiesDialog.properties
@@ -14,5 +14,5 @@ okButton.name=OK
 
 #########
 # error messages
-error.badaddress=Invalid address out of the range 0 ~ 255
-error.badmask=Invalid mask out of the range 1 ~ 32 
+error.badaddress=Invalid address
+error.badmask=Invalid mask out of the range 1 ~ 32 / IPv4, 1 ~ 64 / IPv6
