SSM-2923: Fix for HTTP options: Button name mismatch
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26874 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/HttpConfigurationPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/HttpConfigurationPropertiesDialog.properties
@@ -40,4 +40,4 @@ tls-protocol.SSLv3=SSL 3.0
 tls-protocol.TLSv1=TLS 1.0
 tls-protocol.TLSv1.1=TLS 1.1
 tls-protocol.TLSv1.2=TLS 1.2
-managesecurepasswords.label=Mana&ge Secure Passwords...
+managesecurepasswords.label=Mana&ge Stored Passwords...
