SSG-4180: Fix for SEVERE: Credentials cannot be used for NTLM authentication logged along with stack trace
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@26878 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/logging.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/logging.properties
@@ -37,6 +37,7 @@ org.apache.cxf.phase.PhaseInterceptorChain.level = SEVERE
 org.apache.catalina.startup.DigesterFactory.level = SEVERE
 org.hibernate.validator.util.Version.level = SEVERE
 eu.vahlas.json.schema.level = SEVERE
+org.apache.commons.httpclient.HttpMethodDirector.level = OFF
 
 # Turn off traffic logging for regular log files
 com.l7tech.traffic.useParentHandlers = false
